<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">行走在云端</string>
    <string name="head_logo">head logo</string>
    <string name="home_title">行走在云端</string>
    <string name="search_type">Search Type</string>
    <string name="ticket">门票</string>
    <string name="search">搜 索</string>
    <string name="tab_home">首页</string>
    <string name="tab_ticket">门票</string>
    <string name="tab_hotel">酒店</string>
    <string name="tab_shopping">购物</string>
    <string name="tab_chat">聊天</string>
    <string name="tab_user">用户中心</string>
    <string name="title_activity_ticket">景区列表</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_about">甘孜介绍</string>
    <string name="menu_news">旅游资讯</string>
    <string name="menu_sight">重点景区</string>
    <string name="menu_travel_notes">旅游攻略</string>
    <string name="menu_hotel">酒店预订</string>
    <string name="menu_shopping">购物</string>
    <string name="input_search_ticket_tip">请输入景点关键字</string>
    <string name="buy">立即预订</string>
    <string name="loading">载入中&#8230;</string>
    <string name="showmore">查看更多</string>
    <string name="nomore">没有更多了</string>
    <string name="title_activity_ticket_view">门票列表</string>
    <string name="rate">好评率</string>
    <string name="parent">%</string>
    <string name="buy_ticket">在线订票</string>
    <string name="title_activity_login">用户登录</string>
    <string name="field_account">账号:</string>
    <string name="field_password">密码:</string>
    <string name="input_account_tip">请输入你的登陆邮箱</string>
    <string name="input_pwd_tip">请输入你的登录密码</string>
    <string name="remember_pwd">记住密码并自动登录</string>
    <string name="btn_login">登陆账号</string>
    <string name="btn_regnew">注册新会员</string>
    <string name="userlogin">用户登陆</string>
    <string name="logout">退出登录</string>
    <string name="title_activity_register">注册新用户</string>
    <string name="field_re_password">确认密码:</string>
    <string name="input_re_pwd_tip">请再输入一次</string>
    <string name="field_tel">手机:</string>
    <string name="field_usetime">使用时间:</string>
    <string name="field_contact">联系人:</string>
    <string name="field_contact_tel">联系电话:</string>
    <string name="input_tel_tip">请输入你的手机号码</string>
    <string name="btn_login_1">登陆现有账号</string>
    <string name="title_activity_detail">详细页</string>
    <string name="reload">重新加载</string>
    <string name="title_activity_buy_ticket">购买门票</string>
    <string name="field_buy_count">购买数量:</string>
    <string name="input_name_tip">姓名</string>
    <string name="input_idcard_tip">身份证号码</string>
    <string name="total_money">金额合计:￥%d元</string>
    <string name="go_pay">去支付宝付款</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="confirm_install_hint">"安装提示"</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装移动快捷支付，才能进行付款。\n\n点击确定，立即安装。"</string>
    <string name="title_activity_hotel">酒店</string>
    <string name="in_city">入住城市</string>
    <string name="input_city_tip">名称</string>
    <string name="field_city">入住城市</string>
    <string name="field_checkin_date">入住时间</string>
    <string name="input_checkin_tip">日期</string>
    <string name="field_in_days">住几晚</string>
    <string name="field_key">关键字</string>
    <string name="input_key_tip">酒店名称/品牌</string>
    <string name="field_price">房价/类型</string>
    <string name="hotel_types_all">不限</string>
    <string name="input_days_tip">天数</string>
    <string name="title_activity_number_picker">请输入数量</string>
    <string name="btn_setting">设 置</string>
    <string name="btn_cancel">取 消</string>
    <string name="title_activity_hotel_more_filter">房价/类型/设施 筛选</string>
    <string name="no_limit">不限</string>
    <string name="hotel_price_range_150">150&#8211;300元</string>
    <string name="hotel_price_range_300">300&#8211;600元</string>
    <string name="hotel_price_range_600">600元以上</string>
    <string name="hotel_type_1">星级酒店</string>
    <string name="hotel_type_2">宾馆</string>
    <string name="hotel_type_3">温泉酒店</string>
    <string name="hotel_type_4">旅馆</string>
    <string name="hotel_type_5">招待所</string>
    <string name="hotel_type_6">客栈</string>
    <string name="hotel_type_7">民居接待</string>
    <string name="hotel_facility_havDiningRoom">带餐厅</string>
    <string name="hotel_facility_havMeetingRoom">有会议室</string>
    <string name="hotel_facility_havBreakfast">提供早餐</string>
    <string name="hotel_facility_havHotWater">24小时热水</string>
    <string name="hotel_facility_havPark">有停车场</string>
    <string name="btn_ok">确 定</string>
    <string name="title_activity_hotel_list">酒店列表</string>
    <string name="money">￥</string>
    <string name="money_start">起</string>
    <string name="order_notify">预订须知</string>
    <string name="hotel_detail">酒店图文详情</string>
    <string name="change">更改</string>
    <string name="title_activity_hotel_view">查看酒店资料</string>
    <string name="title_activity_date_picker">日期选择</string>
    <string name="title_activity_buy_room">酒店房间预定</string>
    <string name="field_rooms">房间数</string>
    <string name="btn_buy">提交订单并付款</string>
    <string name="field_people">入住人数</string>
    <string name="field_come_time">到店时间</string>
    <string name="title_activity_come_time_picker">到店时间</string>
    <string name="to">-</string>
    <string name="title_activity_contacts">联系人列表</string>
    <string name="title_activity_user_center">用户中心</string>
    <string name="my_info">我的个人资料</string>
    <string name="my_ticket">我购买的门票</string>
    <string name="my_hotel">我预定的酒店</string>
    <string name="my_comment">我的评论</string>
    <string name="title_activity_my_info">个人信息</string>
    <string name="btn_camera">拍照</string>
    <string name="btn_photo_album">从相册选择</string>
    <string name="field_nickname">昵称:</string>
    <string name="input_nickname_tip">请输入昵称</string>
    <string name="field_realname">真实姓名:</string>
    <string name="field_idcard">身份证号:</string>
    <string name="input_realname_tip">请输入真实姓名</string>
    <string name="btn_save">保 存</string>
    <string name="title_activity_my_ticket">我购买的门票</string>
    <string name="title_activity_my_hotel">我预定的酒店</string>
    <string name="inMans">入住人</string>
    <string name="total_money_1">金额合计:</string>
    <string name="order_status">订单状态:</string>
    <string name="btn_delete_order">删除订单</string>
    <string name="btn_refund">申请退款</string>
    <string name="btn_unrefund">撤销申请</string>
    <string name="useMans">使用人</string>
    <string name="retry">重试</string>
    <string name="cancel">取消</string>

    <!-- article -->
    <string name="data_load_fail">载入数据失败</string>
    <string name="no_match_article">没有符合条件的文章.</string>
    
    <!-- Road -->
    <string name="in_the_road">在路上</string>
    <string name="OK">确定</string>
    <string name="create_channel">创建频道</string>
    <string name="channel_subject">频道主题</string>
    <string name="set_password">设置密码</string>
    <string name="summary">简介</string>
    
</resources>